using static System.Console;

namespace ConAppCommandPattern.Model;

public class Receiver
{
    public static void Action()
    {
        WriteLine("Receiver.Action() called");
    }
}
